tests/ui/resolve/unknown_import.stderr
error: file doesnotexist1 not found
  --> ROOT/tests/ui/resolve/unknown_import.sol:LL:CC
   |
LL | import "doesnotexist1";
   |        ^^^^^^^^^^^^^^^
   |

error: file doesnotexist2 not found
  --> ROOT/tests/ui/resolve/unknown_import.sol:LL:CC
   |
LL | import {A} from "doesnotexist2";
   |                 ^^^^^^^^^^^^^^^
   |

error: file doesnotexist3 not found
  --> ROOT/tests/ui/resolve/unknown_import.sol:LL:CC
   |
LL | import * as B from "doesnotexist3";
   |                    ^^^^^^^^^^^^^^^
   |

error: aborting due to 3 previous errors

