tests/ui/resolve/unknown_import.sol
import "doesnotexist1"; //~ ERROR: not found
import {A} from "doesnotexist2"; //~ ERROR: not found
import * as B from "doesnotexist3"; //~ ERROR: not found
